fix: layout issues

--- a/styles/toolsmenu.css
+++ b/styles/toolsmenu.css
@@ -28,12 +28,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 8px;
+        gap: 0.3em;
       }
 
       .arrow-icon{
         transition: .2s ease-in-out;
-        margin-top: 0.2em;
+        margin-top: 0.1em;
       }
 
       .selected {
